# bo-tie

./: .dockerignore  .gitignore  Cargo.toml  LICENSE
base-crates/bo-tie-linux/: Cargo.toml
base-crates/bo-tie-linux/ci/docker/Raspbain/: Dockerfile
base-crates/bo-tie-linux/src/: event.rs  lib.rs  timeout.rs
bluez/: byteswap.h  endian.h
ci/: android-emulator-setup.sh  android_ndk.sh  docker_emulator.sh  run-docker.sh  run.sh
ci/android/BoTieTester/app/: build.gradle
ci/android/BoTieTester/app/src/main/: AndroidManifest.xml
ci/android/TestProject/app/: build.gradle
ci/android/TestProject/app/src/main/: AndroidManifest.xml
ci/android/bo-tie-tests/: .gitignore  .swp  Cargo.toml  build.rs
ci/android/bo-tie-tests/src/: jni_gen.rs  lib.rs
ci/android/bo-tie-tests/src/java/: Test.java  Test.kt
ci/android/test-runner/: Cargo.toml
ci/android/test-runner/src/: lib.rs
ci/docker/: android-emulator-setup.sh  android-setup.sh  run-build.sh  run-local.sh  run.sh
ci/docker/aarch64-linux-android/: Dockerfile
ci/docker/android/: run-docker-target.sh
ci/docker/android/instrument-tests/: Dockerfile  run.sh  setup.sh
ci/docker/android/instrument-tests/BoTieTester/: build.gradle  local.properties
ci/docker/android/local-tests/: run.sh
ci/docker/arm-linux-androideabi/: Dockerfile
ci/docker/armv7-linux-androideabi/: Dockerfile
ci/docker/i686-linux-android/: Dockerfile
ci/docker/targets/: android-target-setup.sh  run-docker-target.sh  run.sh
ci/docker/targets/aarch64-linux-android/: Dockerfile
ci/docker/targets/arm-linux-androideabi/: Dockerfile
ci/docker/targets/armv7-linux-androideabi/: Dockerfile
ci/docker/targets/i686-linux-android/: Dockerfile
ci/docker/targets/x86_64-linux-android/: Dockerfile
ci/docker/x86_64-linux-android/: Dockerfile
examples/: advertiser.rs  bonding-slave.rs  connect-master.rs  connect-slave.rs  heart-rate-profile.rs
src/: att.rs  bluez.rs  event.rs  lib.rs
src/android/: android-jni.rs  classbytes.rs  gatt.rs  mod.rs
src/android/java/botie/: AdvertiseCallback.java  BluetoothGattCallback.java  ScanCallback.java
src/android/le/: advertise.rs  mod.rs  scan.rs
src/android/wrapper/: advertise.rs  mod.rs
src/att/: client.rs  mod.rs  pdu.rs  server.rs
src/gap/: advertise.rs  mod.rs
src/gatt/: characteristic.rs  mod.rs
src/hci/: cb.rs  common.rs  error.rs  events.rs  info_params.rs  link_control.rs  link_policy.rs  mod.rs  opcodes.rs  status_prams.rs  testing.rs
src/hci/le/: common.rs  con_pram_req.rs  connection.rs  encryption.rs  mandatory.rs  mod.rs  receiver.rs  transmitter.rs
src/hci/unix/: event.rs  mod.rs
src/l2cap/: mod.rs
src/link_layer/: le.rs
src/sm/: encrypt_info.rs  initiator.rs  lazy_encrypt.rs  mod.rs  pairing.rs  responder.rs  toolbox.rs
subcrates/android/android-test/: .gitignore  Cargo.toml  build.rs
subcrates/android/android-test/examples/: basic.rs
subcrates/android/android-test/src/: lib.rs
subcrates/android/classbytes/: Cargo.toml  JavaFiles.toml  classbytes.rs
subcrates/android/classbytes/ci/: Dockerfile  run-docker.sh
subcrates/android/classbytes/src/: main.rs
subcrates/test-related/android-test/: Cargo.toml  build.rs
subcrates/test-related/android-test/examples/: basic.rs
subcrates/test-related/android-test/src/: lib.rs
tests/: linux.xrs
(+15 files in other folders)
