[package]
name = "bo-tie"
version = "0.1.0"
authors = []
keywords = ["Bluetooth", "BLE", "Low Energy"]
categories = ["asynchronous"]
license = "MIT"
edition = "2018"

[dependencies]
serde = "1.0.85"
log = "0.4.6"
uuid = "~0.8"

[dependencies.bincode]
version = "1.0.1"
features = ["i128"]

[dev-dependencies]
simple-signal= "1.1.1"
lazy_static = "^1.1"
getopts = "^0.2"
futures-preview = { version = "0.3.0-alpha.16" }
simplelog = "0.6.0"
rand = "0.7.0"

[target.'cfg(target_os = "linux")'.dev-dependencies]
bo-tie-linux = { path = "base-crates/bo-tie-linux" }

[workspace]
members = [
    "base-crates/bo-tie-linux"
]
