[package]
name = "bo-tie"
version = "0.1.0"
authors = []
keywords = ["Bluetooth", "BLE", "Low Energy"]
categories = ["asynchronous"]
license = "MIT"
edition = "2018"

[dependencies]
serde = { version = "~1.0.102", features = ['derive'] }
log = "0.4.6"
uuid = "0.8"
aes = "0.3.2"
crossbeam-utils = "0.7.0"
rand_core = "0.5.1"
ring = "0.16.9"

[features]
default = ["v5_0"]
v4_2 = [] # bluetooth v4.2
v5_0 = [] # bluetooth v5.0

[dependencies.bincode]
version = "1.0.1"
features = ["i128"]

[dev-dependencies]
lazy_static = "1.1"
futures-preview = "0.3.0-alpha.19"
simplelog = "0.6"
rand = "0.7"
async-timer = "0.6"

[target.'cfg(target_os = "linux")'.dev-dependencies]
bo-tie-linux = { path = "base-crates/bo-tie-linux" }
simple-signal= "1.1.1"
getopts = "0.2"

[workspace]
members = [
    "base-crates/bo-tie-linux"
]
